# SaAlign

./: README.md  SaAlign.py  SaAlign_package-1.0.tar.xz  test.py
Project1/: DNA.txt
Project1/Project1/: dynamic.cpp  dynamic.h  main.cpp  optimal.cpp  optimal.h  sa.cpp  suffixtree.cpp  suffixtree.h
dataset/: covid_1.fasta
neigh/: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  cmdline.c  cmdline.h  config.h  neigh
neigh/src/: config.h.in  dist_matrix.c  dist_matrix.h  io.c  io.h  main.c  neighbour_joining.c  neighbour_joining.h  options.ggo  phylogenetic_tree.c  phylogenetic_tree.h  result.txt  utilities.c  utilities.h  viz.c  viz.h
